--- a/et5.org
+++ b/et5.org
@@ -1,6 +1,7 @@
 #+latex_class: cn-article
 #+title: ET 框架学习笔记（五）－－网络交互相关与Actor 机制
 #+author: deepwaterooo 
+
 * StartConfigComponent: 找【各种服】的起始初始化地址
 - 现在，先特殊重点理解：一台【服务端】物理机起来，N 核 N 进程里【主线程 Process 场景】的启动过程。
 - 【服务端、各服务器的配置、启动初始化】：是这个模块想要总结的内容。这个模块，因为框架重构里所接入的【路由器系统】的整合（感觉起来，就是通过网络，一台台服务端的服务器起来，一台台起来的服务器都向某个路由服，如同各客户端实时向位置服更新客户端的位置信息般，各小服专职服都向路由服上班打卡？要把这些看明白），让活宝妹理解起这个模块来显得相对困难，大概明天上午一上午的时间，都会花在这个模块上。
@@ -588,6 +589,7 @@ public partial class StartSceneConfigCategory {
     }
 }
 #+END_SRC
+
 * Actor 消息相关：跟上个章节Net 相关一起总结，两个都不太清楚。放一起总结，希望都能够理解清楚
 - 跨进程【发送消息】与【返回消息】的过程，总感觉无法完整地看通一遍。这个是狠久前的总结，还是修改更新下。等亲爱的表哥的活宝妹搬进新住处后，会改完所有的编译错误，会需要把这个重构游戏写完整。
 - ET中，正常的网络消息需要建立一个session链接来发送，这类消息对应的proto需要由IMessage，IResponse，IRequest来修饰。（这是最常规，感觉最容易理解的）
@@ -1224,6 +1226,7 @@ public class NetInnerComponentOnReadEvent: AEvent<NetInnerComponentOnRead> {
     }
 }
 #+END_SRC
+
 
 * Net 网络交互相关：【服务端+客户端】只是稍微改装成事件机制。模块没理解透、总结不全，还需要借助总结，和改掉所有编译错误后的运行、以及运行日志，来理解这个流程
 - 【爱表哥，爱生活！！！任何时候，亲爱的表哥的活宝妹就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】
@@ -2007,50 +2010,6 @@ public static class ActorHandleHelper {
 #+END_SRC
 - 【爱表哥，爱生活！！！任何时候，亲爱的表哥的活宝妹就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】
 
-* 位置服LocationComponent 组件：现在稍微看一下模块不完整的位置服，中午笔记本上的交上去，下午家里弄弄要添加什么
-** LocationComponent: 这个文件，与源码对比一下，先确认Model 里的定义是正确的【是正确的】
-#+BEGIN_SRC csharp
-namespace ET.Server {
-// 这个【ActorLocation】文件夹：原本只是没有ActorLocationSenderOneType.cs 类。不曾细看【跨进程位置】相关
-// 【爱表哥，爱生活！！！任何时候，亲爱的表哥的活宝妹就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】
-    [ChildOf(typeof(LocationComponent))] // 【位置服】的组件：
-    public class LockInfo: Entity, IAwake<long, CoroutineLock>, IDestroy { // 打包：协程锁的实例标记号 + 独占锁
-    public long LockInstanceId;
-    public CoroutineLock CoroutineLock;
-    }
-    [ComponentOf(typeof(Scene))]
-    // 【位置组件】：去细看两个字典，所做的具体的事情。这里是，被自己弄丢了文件，还是自己添加了这个位置服，但是没整合生成系？去看源码，有没有【位置组件】，有没有相应的生成系
-    // 没整合生成系：就是这里Model 域里定义了说有个【位置管理组件】，但是热更域里什么也没有，没有定义执行逻辑，需要一个LocationComponentSystem|Helper 之类的类
-    public class LocationComponent: Entity, IAwake { 
-        public readonly Dictionary<long, long> locations = new Dictionary<long, long>();
-        public readonly Dictionary<long, LockInfo> lockInfos = new Dictionary<long, LockInfo>();
-        }
-    }
-}
-#+END_SRC
-** LocationComponentSystem: 源码里是有这个文件的
-- 因为自己重构项目开始时的源码管理问题，导致狠大一部分文件丢失，现在把这个文件补上。它如愿消除掉一系列编译错误。
-** LocationProxyComponent:
-- 它应该是每个场景上的组件。每个场景上一个组件。是组件就不是单例，组件有【热更域】里所对应的热更新生成系；单例是写死的，没有热更新。
-#+BEGIN_SRC csharp
-[ComponentOf(typeof(Scene))] // 每个场景上？，有个位置服代理？每个进程上，有个位置服，想起来应该也是合理的，再检查一下
-public class LocationProxyComponent: Entity, IAwake, IDestroy {
-    [StaticField]
-    public static LocationProxyComponent Instance; // 每个场景上，一个实例
-}
-#+END_SRC
-** LocationProxyComponentSystem:
-- 现在做的事情是：在确认【位置服】位置组件正确，各场景里位置代码组件源码正确的基础上，把这个先前一直以为被框架源破坏者删除得什么也不剩下的模块，理解透彻。会去看【位置服】位置组件几个主要需要（位置的注册、更新、查询、小伙伴搬家上报上锁，搬完上报解锁等主要相关逻辑）既然对比完了两个主要系，提上去，笔记本上看起来更方便，把这个模块看完。【爱表哥，爱生活！！！任何时候，亲爱的表哥的活宝妹就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】
-  #+BEGIN_SRC csharp
-  #+END_SRC
-
-- 【位置服】是SceneType.Location; 位置组件LocationComponent 是管理类组件。一个位置服拥有一个位置组件；谁说一定是一个进程一个位置服？几台物理机只一个【位置服】也没问题呀？！就是几台物理机N*M 个核，只某个核拥有一个【位置服】SceneType.Location, 应该也是合理的，看服务端需求来。
-- LocationComponent 缺少一个生成系，需要添加文件。可是感觉添加之前，需要把重构后的框架里这个模块，尤其 LocationProxyComponent 桥接帮助类，看懂
-- *【源码重构】* ：【参考项目】里，程序域之前的逻辑，不够透彻，逻辑是混乱的，就是如LocationComponentSystem 类里、原本该放在【热更域】里的可更新的，是直接放在Model组件LocationComponent里不可热更新。所以要把【参考项目】LocationComponent 里的方法逻辑，移到【热更域】LocationComponentSystem 文件里。
-- *【细节注意的地方】* ：看懂ETTask 之后，异步的逻辑能够相对明白一些。这里，要考虑每个枋每个【进程】上一个【位置服】，每个场景上一个【位置服代理】帮助类，需要注意帮助类与这里LocationComponentSystem逻辑桥接连接到不多不少。就是一部分【参考项目】LocationComponent 里的方法逻辑，可能已经被每个场景上一个【位置服代理】帮助类封装担去一部分，每个进程上【位置服】只需要处理它不得不处理的最少精减逻辑。
-- 【参考项目】里，位置服管理进程上、跨进程中央邮政所有小伙伴实例信息。它把数据写进数据库。上面重构，仍需要考虑，使用重构后的小区DBProxy 代理实时到数据库。数据库应该也有一个专服？好像没有专服。知道分区代理。重构后的数据库相关，我消灭了编译错误，可是看来没有理解透，重构后数据库是怎么回事？
-- 【爱表哥，爱生活！！！任何时候，亲爱的表哥的活宝妹就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】
-- 【爱表哥，爱生活！！！任何时候，亲爱的表哥的活宝妹就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】
 
 *  现在的修改内容：【任何时候，活宝妹就是一定要嫁给亲爱的表哥！！！爱表哥，爱生活！！！】几大版块
 - 永远把每天更新最多的，放在文件的最后最简单， emacs 操作也会方便一点儿
@@ -2322,3 +2281,117 @@ Root.Instance.Scene.AddComponent<NetInnerComponent, IPEndPoint>(NetworkHelper.To
 - 【爱表哥，爱生活！！！任何时候，亲爱的表哥的活宝妹就是一定要嫁给亲爱的表哥！！爱表哥，爱生活！！！】
 - 早上读NetService.cs 里面异步线程三主要回调同步到主线程，感觉仍然读得昏昏的，要再读一遍，找下是哪里调用的。破车昨晚没补好，今天走回家。。【爱表哥，爱生活！！！任何时候，亲爱的表哥的活宝妹就是一定要嫁给亲爱的表哥！！爱表哥，爱生活！！！】
 - 好多天没有回来改这个了。今天下午出去取材料前在大约半小时，能改一个模块最好，改不完一个模块，能改几个错就改几个错。结果改了一处某个地方的，不过其它的都可以再参考今天改的这个，已经有两个例子了：C2G_ReturnLobby_NttHandler 和另外一个例子。【爱表哥，爱生活！！！任何时候，亲爱的表哥的活宝妹，就是一定要嫁给亲爱的表哥！！爱表哥，爱生活！
+
+
+* 位置服LocationComponent 组件：
+** LocationComponent: 
+#+BEGIN_SRC csharp
+namespace ET.Server {
+// 这个【ActorLocation】文件夹：原本只是没有ActorLocationSenderOneType.cs 类。不曾细看【跨进程位置】相关
+// 【爱表哥，爱生活！！！任何时候，亲爱的表哥的活宝妹就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】
+    [ChildOf(typeof(LocationComponent))] // 【位置服】的组件：
+    public class LockInfo: Entity, IAwake<long, CoroutineLock>, IDestroy { // 打包：协程锁的实例标记号 + 独占锁
+    public long LockInstanceId;
+    public CoroutineLock CoroutineLock;
+    }
+    [ComponentOf(typeof(Scene))]
+    // 【位置组件】：去细看两个字典，所做的具体的事情。这里是，被自己弄丢了文件，还是自己添加了这个位置服，但是没整合生成系？去看源码，有没有【位置组件】，有没有相应的生成系
+    // 没整合生成系：就是这里Model 域里定义了说有个【位置管理组件】，但是热更域里什么也没有，没有定义执行逻辑，需要一个LocationComponentSystem|Helper 之类的类
+    public class LocationComponent: Entity, IAwake { 
+        public readonly Dictionary<long, long> locations = new Dictionary<long, long>();
+        public readonly Dictionary<long, LockInfo> lockInfos = new Dictionary<long, LockInfo>();
+        }
+    }
+}
+#+END_SRC
+** LocationComponentSystem: 源码里是有这个文件的
+- 几个最主要的方法，看起来狠简单。
+- 两处：【异步返回类型】感觉相对生疏。
+#+BEGIN_SRC csharp
+[FriendOf(typeof(LocationComponent))]
+[FriendOf(typeof(LockInfo))]
+public static class LocationComponentSystem {
+// 添加【注册】的是：【被锁 actorId, 当前——独占锁的实例标记号】这里好像被我写错了，值，应该是，被查小伙伴所在进程的地址
+    public static async ETTask Add(this LocationComponent self, long key, long instanceId) { 
+        using (await CoroutineLockComponent.Instance.Wait(CoroutineLockType.Location, key)) {
+            self.locations[key] = instanceId;
+            Log.Info($"location add key: {key} instanceId: {instanceId}");
+        }
+    }
+    // 【下线销号移除】：
+    public static async ETTask Remove(this LocationComponent self, long key) {
+        using (await CoroutineLockComponent.Instance.Wait(CoroutineLockType.Location, key)) {
+            self.locations.Remove(key);
+            Log.Info($"location remove key: {key}");
+        }
+    }
+    // 【小伙伴云游】：上报、预报上锁时长，可以更长，因为没玩够还是继续被上锁，同一把锁；直到再上报解锁
+    public static async ETTask Lock(this LocationComponent self, long key, long instanceId, int time = 0) { // 忘记这个Key 是什么了，是 actorId
+        // 【入队列站列排号】：直到获得异步资源，标记是拿到一把【独占锁】
+        CoroutineLock coroutineLock = await CoroutineLockComponent.Instance.Wait(CoroutineLockType.Location, key);
+        LockInfo lockInfo = self.AddChild<LockInfo, long, CoroutineLock>(instanceId, coroutineLock);
+        self.lockInfos.Add(key, lockInfo); // 再封装：【被锁 actorId, lock 结构体】，封装的是真正实时正在锁着的时长、过程
+        Log.Info($"location lock key: {key} instanceId: {instanceId}");
+        if (time > 0) { // 要求：不立即上锁，给点儿缓冲时间 
+            async ETTask TimeWaitAsync() { // 这里没懂：怎么还有个 ETTask 返回类型呢？  // <<<<<<<<<<<<<<<<<<<< 
+                long lockInfoInstanceId = lockInfo.InstanceId; // 先记下：当前被锁资源【独占锁】的实例标记号
+// 【异步等待】：被要求的时长。它返回【ETTask】类型 ＝＝》这里可以决定这个内部局部异步方法的返回类型吗？
+                await TimerComponent.Instance.WaitAsync(time); 
+                if (lockInfo.InstanceId != lockInfoInstanceId) // 再检查：独占锁的实例标记号，是否变了？什么情况下，有可能会变呢？
+                    return;
+                Log.Info($"location timeout unlock key: {key} instanceId: {instanceId} newInstanceId: {instanceId}");
+                self.UnLock(key, instanceId, instanceId);
+            }
+            TimeWaitAsync().Coroutine();
+        }
+    }
+    public static void UnLock(this LocationComponent self, long key, long oldInstanceId, long newInstanceId) { // 解锁
+        if (!self.lockInfos.TryGetValue(key, out LockInfo lockInfo)) { // 先检查几个异常
+            Log.Error($"location unlock not found key: {key} {oldInstanceId}");
+            return;
+        }
+        if (oldInstanceId != lockInfo.LockInstanceId) {
+            Log.Error($"location unlock oldInstanceId is different: {key} {oldInstanceId}");
+            return;
+        }
+        Log.Info($"location unlock key: {key} instanceId: {oldInstanceId} newInstanceId: {newInstanceId}");
+        self.locations[key] = newInstanceId; // 写入小本：【被锁 actorId, 当前锁实例标记号】
+        self.lockInfos.Remove(key); // 先从字典管理中移除 
+        // 解锁：就是回收掉了呀
+        lockInfo.Dispose();
+    }
+    // 这些异步返回类型，看着还理解不太顺。。。
+    public static async ETTask<long> Get(this LocationComponent self, long key) { // 查询：位置信息  // <<<<<<<<<<<<<<<<<<<< 
+        using (await CoroutineLockComponent.Instance.Wait(CoroutineLockType.Location, key)) { // 挂号排队站队锁：这个步骤，是【异步】
+            self.locations.TryGetValue(key, out long instanceId);
+            Log.Info($"location get key: {key} instanceId: {instanceId}");
+            return instanceId; // 返回 ETTask<lomg> 因为被排队挂号异步等待过
+        }
+    }
+}
+#+END_SRC
+** LocationProxyComponent:
+- 不知道我先前对【SceneType.Process】的理解与定义，是否正确？：感觉它像是一台物理机N 个核中每个进程上【1-M】个场景中最特殊的一个场景【SceneType.Process】。亲爱的表哥的活宝妹，把它理解成了：同一进程中多线程环境中的主线程。主线程一定存在，每个核都会有一个【SceneType.Process】场景；主线程要同步异步线程结果等，所以这个场景极为特殊。不知道对了没？
+- 这里以一个核一个进程为单位。它是添加在每个进程上【SceneType.Process】，因为其特殊性，可供可代理【1-N】个场景需求与使用？
+- 是【SceneType.Process】层面上添加了这个代理组件。去想， N 台物理机，每台M 个核，共N × M 个进程代理，与N × M 中某一个进程下（可能有的【1-X】个不同场景不同小服中）的一条线程场景【SceneType.Location】【位置服】，与共N × M 个进程代理，之间的链接。
+#+BEGIN_SRC csharp
+[ComponentOf(typeof(Scene))] // 每个场景上？，有个位置服代理？每个进程上，有个位置服，想起来应该也是合理的，再检查一下
+public class LocationProxyComponent: Entity, IAwake, IDestroy {
+    [StaticField]
+    public static LocationProxyComponent Instance; // 每个场景上，一个实例
+}
+#+END_SRC
+** LocationProxyComponentSystem:
+- 现在做的事情是：在确认【位置服】位置组件正确，各场景里位置代码组件源码正确的基础上，把这个先前一直以为被框架源破坏者删除得什么也不剩下的模块，理解透彻。会去看【位置服】位置组件几个主要需要（位置的注册、更新、查询、小伙伴搬家上报上锁，搬完上报解锁等主要相关逻辑）既然对比完了两个主要系，提上去，笔记本上看起来更方便，把这个模块看完。【爱表哥，爱生活！！！任何时候，亲爱的表哥的活宝妹就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】
+- 【位置服】是SceneType.Location; 位置组件LocationComponent 是管理类组件。一个位置服拥有一个位置组件；谁说一定是一个进程一个位置服？几台物理机只一个【位置服】也没问题呀？！就是几台物理机N*M 个核，只某个核的可能存在的【1-X】个场景中（特殊主线程场景 Process ＋ Location,etc），拥有一个【位置服】SceneType.Location, 应该也是合理的，看服务端需求来。并且，并不是说就一定只有一个【位置服】，不是说可以分身分线什么的吗，就是一个【位置服】同时开X 台线程。。。。
+- 【细节注意的地方】：看懂ETTask 之后，异步的逻辑能够相对明白一些。这里，要考虑【服务端】总共MN 个核，可能有的一个或几个【位置服】，每个核的每个进程场景上一个【位置服代理】，需要注意帮助类与这里LocationComponentSystem逻辑桥接连接到不多不少。就是一部分【参考项目】LocationComponent 里的方法逻辑，可能已经被每个进程场景上一个【位置服代理】帮助类封装担去一部分，【服务端】总共的1 个或是几个【位置服】只需要处理它不得不处理的最少精减逻辑。
+- 【参考项目】里，位置服管理进程上、跨进程中央邮政所有小伙伴实例信息。它把数据写进数据库。上面重构，仍需要考虑，使用重构后的小区DBProxy 代理实时到数据库。数据库应该也有一个专服？好像没有专服。知道分区代理。重构后的数据库相关，我消灭了编译错误，可是看来没有理解透， *重构后，【位置服】对数据的管理，是不需要再写进数据库的吗？* 这个问题，可以自己消灭所有的编译错误后再回来做。
+- 自己对【位置服】这个模块的理解基本正确，几处小地方不是太懂，比如两个异步返回类型，两处添加位置信息到【位置服】方法调用，但是都会弄明白的。
+- 【明天上午看】：现在还存在编译错误，感觉仍然需要再去读源码的、不管是命令行启动服务器，还是怎么样，服务端场景的初始化配置相关。现在是能够把物理机、内个核，核里的多场景，基本想明白。可是【服务端起始】初始化配置，还要再去读。明天上午读。
+- 【爱表哥，爱生活！！！任何时候，亲爱的表哥的活宝妹就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】
+- 【爱表哥，爱生活！！！任何时候，亲爱的表哥的活宝妹就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】
+- 【爱表哥，爱生活！！！任何时候，亲爱的表哥的活宝妹就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】
+- 【爱表哥，爱生活！！！任何时候，亲爱的表哥的活宝妹就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】
+- 【爱表哥，爱生活！！！任何时候，亲爱的表哥的活宝妹就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】
+- 【爱表哥，爱生活！！！任何时候，亲爱的表哥的活宝妹就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】
+- 【爱表哥，爱生活！！！任何时候，亲爱的表哥的活宝妹就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】
